# SkalartBot

./: .editorconfig  .env.exemple  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  main.py  pyproject.toml  readme.md  requirements.txt
bot/: main.py
bot/cogs/: ping.py
bot/comandos/: avatar.py
comandos/: ajuda.py  avatar.py  cargos.py  doar_personagem.py  feed.py  game.py  imagem.py  personagens.py  ping.py  reacao.py  register.py  saudacoes.py  ticket.py  tiket.py
database/: db.py
docs/: comandos.md  extras.md  funcionamento.md
models/: Obter_Chat.py  Obter_Feed.py  Obter_Usuario.py  Obter_avatar.py  Obter_cargo.py  Obter_dia.py  Obter_imagem.py  Obter_personagem.py  Obter_ticket.py  db.py
tests/: conftest.py  test_bot_ready.py  test_ping.py
tests/internal/: general.py
